fix popover getting pushes too much

--- a/lunalux/static/css/lunalux.css
+++ b/lunalux/static/css/lunalux.css
@@ -2047,7 +2047,7 @@ caption {
   padding-top: 0.5rem;
   transform: translateY(-0.3rem);
   margin-right: 0.5rem;
-  max-width: 300px;
+  width: 300px;
   z-index: 10;
 
 }
